# scalar_submission

./: Dockerfile  MANIFEST.in  README.md  app.py  baseline.py  commit_push.py  debug_run.py  diag_run.py  environment.py  inference.py  openenv.yaml  openenv_server.py  pyproject.toml  requirements.txt  schema.py  tasks.py  test_api.py  test_server.py  verify_env.py
scalar/: README.md  __init__.py
scalar/server/: __init__.py  app.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
