[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-openenv"
version = "1.0.0"
description = "OpenEnv customer support ticket management environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Agent" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "openai",
  "openenv-core[core]",
  "google-genai"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
  "app",
  "baseline",
  "environment",
  "inference",
  "openenv_server",
  "schema",
  "tasks",
  "verify_env"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
